baml_language/crates/baml_tests/snapshots/parser_strings/baml_tests__parser_strings__10_formatter__nested_quotes.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== PARSER ERROR ===
[UnexpectedToken { expected: "attribute argument", found: "error", span: Span { file_id: FileId(0), range: 147..148 } }, UnexpectedToken { expected: "')'", found: "error", span: Span { file_id: FileId(0), range: 147..148 } }, UnexpectedToken { expected: "Unexpected token in class body", found: "error", span: Span { file_id: FileId(0), range: 147..148 } }, UnexpectedToken { expected: "Unexpected token in class body", found: "'\"'", span: Span { file_id: FileId(0), range: 157..158 } }, InvalidSyntax { message: "field 'The' is missing a type annotation", span: Span { file_id: FileId(0), range: 203..206 } }, UnexpectedToken { expected: "Unexpected token in class body", found: "error", span: Span { file_id: FileId(0), range: 207..208 } }, UnexpectedToken { expected: "Unexpected token in class body", found: "'\"'", span: Span { file_id: FileId(0), range: 208..209 } }, InvalidSyntax { message: "field 'quote' is missing a type annotation", span: Span { file_id: FileId(0), range: 209..214 } }, UnexpectedToken { expected: "Unexpected token in class body", found: "error", span: Span { file_id: FileId(0), range: 214..215 } }, UnexpectedToken { expected: "Unexpected token in class body", found: "'\"'", span: Span { file_id: FileId(0), range: 215..216 } }, UnexpectedToken { expected: "Unexpected token in class body", found: "'\"'", span: Span { file_id: FileId(0), range: 224..225 } }, UnexpectedToken { expected: "Unexpected token in class body", found: "')'", span: Span { file_id: FileId(0), range: 225..226 } }, UnexpectedToken { expected: "')'", found: "identifier", span: Span { file_id: FileId(0), range: 273..279 } }, InvalidSyntax { message: "field 'really' is missing a type annotation", span: Span { file_id: FileId(0), range: 273..279 } }, UnexpectedToken { expected: "Unexpected token in class body", found: "error", span: Span { file_id: FileId(0), range: 279..280 } }, UnexpectedToken { expected: "Unexpected token in class body", found: "'\"'", span: Span { file_id: FileId(0), range: 280..281 } }, UnexpectedToken { expected: "Unexpected token in class body", found: "error", span: Span { file_id: FileId(0), range: 282..283 } }, InvalidSyntax { message: "field 'complex' is missing a type annotation", span: Span { file_id: FileId(0), range: 283..290 } }, UnexpectedToken { expected: "Unexpected token in class body", found: "error", span: Span { file_id: FileId(0), range: 290..291 } }, UnexpectedToken { expected: "Unexpected token in class body", found: "'\"'", span: Span { file_id: FileId(0), range: 291..292 } }, UnexpectedToken { expected: "Unexpected token in class body", found: "')'", span: Span { file_id: FileId(0), range: 292..293 } }, UnexpectedToken { expected: "')'", found: "identifier", span: Span { file_id: FileId(0), range: 324..327 } }, InvalidSyntax { message: "field 'key' is missing a type annotation", span: Span { file_id: FileId(0), range: 324..327 } }, UnexpectedToken { expected: "Unexpected token in class body", found: "error", span: Span { file_id: FileId(0), range: 327..328 } }, UnexpectedToken { expected: "Unexpected token in class body", found: "'\"'", span: Span { file_id: FileId(0), range: 328..329 } }, UnexpectedToken { expected: "Unexpected token in class body", found: "':'", span: Span { file_id: FileId(0), range: 329..330 } }, UnexpectedToken { expected: "Unexpected token in class body", found: "error", span: Span { file_id: FileId(0), range: 331..332 } }, UnexpectedToken { expected: "Unexpected token in class body", found: "'\"'", span: Span { file_id: FileId(0), range: 332..333 } }, InvalidSyntax { message: "field 'value' is missing a type annotation", span: Span { file_id: FileId(0), range: 333..338 } }, UnexpectedToken { expected: "Unexpected token in class body", found: "error", span: Span { file_id: FileId(0), range: 338..339 } }, UnexpectedToken { expected: "Unexpected token in class body", found: "'\"'", span: Span { file_id: FileId(0), range: 339..340 } }, UnexpectedToken { expected: "top-level declaration", found: "'\"'", span: Span { file_id: FileId(0), range: 341..342 } }, UnexpectedToken { expected: "top-level declaration", found: "')'", span: Span { file_id: FileId(0), range: 342..343 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 344..345 } }]
