baml_language/crates/baml_tests/snapshots/parser_strings/baml_tests__parser_strings__10_formatter__raw_strings.snap
---
source: target/debug/build/baml_tests-1a45e748177ce512/out/generated_tests.rs
expression: first
---
class RawStrings {
    simple string @description(#"raw string"#)
    with_quotes string @description(#"contains "quotes" easily"#)
    multi_hash string @description(##"contains #"hash"# inside"##)
    multiline string
        @description(
            ###"
    This is a multiline
    raw string with "quotes"
    and #hashes#
  "###,
        )
}
function ProcessText(input: string) -> string {
    client GPT4
    prompt #"
    Process the following text:
    {{ input }}
    
    Return the processed result.
  "#
}
