baml_language/crates/baml_tests/snapshots/parser_strings/baml_tests__parser_strings__10_formatter__simple_strings.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== PARSER ERROR ===
[UnexpectedToken { expected: "')'", found: "identifier", span: Span { file_id: FileId(0), range: 275..280 } }, InvalidSyntax { message: "field 'hello' is missing a type annotation", span: Span { file_id: FileId(0), range: 275..280 } }, UnexpectedToken { expected: "Unexpected token in class body", found: "error", span: Span { file_id: FileId(0), range: 280..281 } }, UnexpectedToken { expected: "Unexpected token in class body", found: "'\"'", span: Span { file_id: FileId(0), range: 281..282 } }, UnexpectedToken { expected: "Unexpected token in class body", found: "'\"'", span: Span { file_id: FileId(0), range: 282..283 } }, UnexpectedToken { expected: "Unexpected token in class body", found: "')'", span: Span { file_id: FileId(0), range: 283..284 } }]
