baml_language/crates/baml_tests/snapshots/parser_strings/baml_tests__parser_strings__10_formatter__unicode_strings.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== PARSER ERROR ===
[UnexpectedToken { expected: "function name", found: "error", span: Span { file_id: FileId(0), range: 891..894 } }, UnexpectedToken { expected: "parameter name", found: "error", span: Span { file_id: FileId(0), range: 904..907 } }, UnexpectedToken { expected: "type annotation", found: "error", span: Span { file_id: FileId(0), range: 904..907 } }, UnexpectedToken { expected: "')'", found: "error", span: Span { file_id: FileId(0), range: 904..907 } }, UnexpectedToken { expected: "return type (->)", found: "error", span: Span { file_id: FileId(0), range: 904..907 } }, UnexpectedToken { expected: "function body", found: "error", span: Span { file_id: FileId(0), range: 904..907 } }, UnexpectedToken { expected: "top-level declaration", found: "error", span: Span { file_id: FileId(0), range: 904..907 } }, UnexpectedToken { expected: "top-level declaration", found: "error", span: Span { file_id: FileId(0), range: 907..910 } }, UnexpectedToken { expected: "top-level declaration", found: "':'", span: Span { file_id: FileId(0), range: 910..911 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 912..918 } }, UnexpectedToken { expected: "top-level declaration", found: "')'", span: Span { file_id: FileId(0), range: 918..919 } }, UnexpectedToken { expected: "top-level declaration", found: "'->'", span: Span { file_id: FileId(0), range: 920..922 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 923..929 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 930..931 } }, UnexpectedToken { expected: "config block", found: "identifier", span: Span { file_id: FileId(0), range: 948..954 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 948..954 } }, UnexpectedToken { expected: "top-level declaration", found: "'#'", span: Span { file_id: FileId(0), range: 955..956 } }, UnexpectedToken { expected: "top-level declaration", found: "'\"'", span: Span { file_id: FileId(0), range: 956..957 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 962..969 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 970..973 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 974..978 } }, UnexpectedToken { expected: "top-level declaration", found: "':'", span: Span { file_id: FileId(0), range: 978..979 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 980..981 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 981..982 } }, UnexpectedToken { expected: "top-level declaration", found: "error", span: Span { file_id: FileId(0), range: 983..986 } }, UnexpectedToken { expected: "top-level declaration", found: "error", span: Span { file_id: FileId(0), range: 986..989 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 990..991 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 991..992 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 997..1003 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 1004..1010 } }, UnexpectedToken { expected: "top-level declaration", found: "with", span: Span { file_id: FileId(0), range: 1011..1015 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 1016..1022 } }, UnexpectedToken { expected: "top-level declaration", found: "':'", span: Span { file_id: FileId(0), range: 1022..1023 } }, UnexpectedToken { expected: "top-level declaration", found: "error", span: Span { file_id: FileId(0), range: 1024..1027 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 1028..1030 } }, UnexpectedToken { expected: "top-level declaration", found: "error", span: Span { file_id: FileId(0), range: 1031..1034 } }, UnexpectedToken { expected: "top-level declaration", found: "'\"'", span: Span { file_id: FileId(0), range: 1037..1038 } }, UnexpectedToken { expected: "top-level declaration", found: "'#'", span: Span { file_id: FileId(0), range: 1038..1039 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 1040..1041 } }]
